@@ -12,3 +12,10 @@ jini.policy.file=insecure.policy
 jini.logging.file=jini.logging
 
 
+# If mulicast is not available on your network, you may try uncommenting
+# the property below. Change the ip address to a machine
+# (or machines - comma separated list) that is running a lookup service.
+# This should only be done as a last resort, as it is far less robust,
+# and probably won't work if DNS is not configured correctly on your network.
+#
+#registry.url=jini://ubuntudan,jini://10.6.18.51,jini://localhost.localdomain
